- sample java clients for dalilite, maxsprout, pepinfo, pepstats, pepwindow, radar, saps - there was a typing error in other sample clients, in one error message
git-svn-id: https://svn.ebi.ac.uk/webservices/webservices-2.0/trunk@2087 8a1ee80d-b71c-0410-a81b-92656cd9ddcf